# advent-of-code

./: .gitattributes  README.md
2022/: README.md  generate.py  run  stack.yaml
2022/s01/: Main.hs  input  package.yaml  s01.cabal
2022/s02/: Main.hs  input  package.yaml  s02.cabal
2022/s03/: Main.hs  input  package.yaml  s03.cabal
2022/s04/: Main.hs  input  package.yaml  s04.cabal
2022/s05/: Main.hs  input  package.yaml  s05.cabal
2022/s06/: Main.hs  input  package.yaml  s06.cabal
2022/s07/: Main.hs  input  package.yaml  s07.cabal
2022/s08/: Main.hs  input  package.yaml  s08.cabal
2022/s09/: Main.hs  input  package.yaml  s09.cabal
2022/s10/: FileInput.hs  Main.hs  input  package.yaml  s10.cabal
2022/s11/: FileInput.hs  Main.hs  Monkey.hs  input  package.yaml  s11.cabal
2022/s12/: FileInput.hs  Main.hs  NDArray.hs  input  package.yaml  s12.cabal
2022/s13/: FileInput.hs  Main.hs  input  package.yaml  s13.cabal
2022/s14/: FileInput.hs  Main.hs  NDArray.hs  input  package.yaml  s14.cabal  show.py
2022/s15/: FileInput.hs  Main.hs  input  package.yaml  s15.cabal
2022/s16/: Main.hs  (+2 more)
2022rs/: Cargo.toml  README.md
2022rs/lib/: aoc2022.rs  array.rs  render.rs
2022rs/s16/: fileio.rs  input  main.rs
2022rs/s17/: input  main.rs
2023/: Cargo.toml  generate.py
2023/aoc2023/: Cargo.toml
2023/aoc2023-macro/: Cargo.toml
2023/aoc2023-macro/src/: lib.rs
2023/aoc2023/src/: fileio.rs  lib.rs
2023/lib/: aoc2023.rs  fileio.rs  lib.rs  macros.rs  parse.rs
2023/s01/: Cargo.toml
2023/s01/inputs/: input  test-input-1  test-input-2
2023/s01/outputs/: expected-output-1  expected-output-2  expected-test-output-1  expected-test-output-2
2023/s01/src/: s01.rs
2023/s02/inputs/: input  test-input-1
2023/s02/outputs/: expected-test-output-1  expected-test-output-2
2023/s02/src/: s02.rs
2023/s03/inputs/: input  test-input-1
2023/s03/outputs/: expected-test-output-1  expected-test-output-2
2023/s03/src/: s03.rs
2023/s04/inputs/: input  test-input-1
2023/s04/outputs/: expected-test-output-1  expected-test-output-2
2023/s04/src/: s04.rs
2023/s05/inputs/: input  test-input-1
2023/s05/outputs/: expected-test-output-1  expected-test-output-2
2023/s05/src/: s05.rs
2023/s06/inputs/: input  test-input-1
2023/s06/outputs/: expected-test-output-1  expected-test-output-2
2023/s06/src/: s06.rs
2023/s07/inputs/: input  test-input-1
2023/s07/outputs/: expected-test-output-1  expected-test-output-2
2023/s07/src/: s07.rs
2023/s08/inputs/: input  test-input-1
2023/s08/outputs/: expected-test-output-1
2023/s08/src/: s08.rs
2023/s09/inputs/: input  test-input-1
2023/s09/outputs/: expected-test-output-1
2023/s09/src/: s09.rs
2023/src01/: main.rs
2023/src01/inputs/: input
2023/template/outputs/: expected-test-output-1
2023/template/src/: template.rs
2025/: Cargo.toml  generate.py
2025/lib/: fileio.rs  lib.rs  macros.rs
2025/s01/inputs/: input  test-input-1
2025/s01/outputs/: expected-test-output-1  expected-test-output-2
2025/s01/src/: grammar.pest  s01.rs
2025/s02/inputs/: input  test-input
2025/s02/outputs/: expected-test-output-1  expected-test-output-2
2025/s02/src/: grammar.pest  s02.rs
2025/s03/inputs/: input  test-input-1
2025/s03/outputs/: expected-test-output-1  expected-test-output-2
2025/s03/src/: grammar.pest  s03.rs
2025/s04/inputs/: input  test-input
2025/s04/outputs/: expected-test-output-1  expected-test-output-2
2025/s04/src/: grammar.pest  s04.rs
2025/s05/inputs/: input  test-input
2025/s05/outputs/: expected-test-output-2
2025/s05/src/: grammar.pest  s05.rs
2025/template/src/: template.rs
(+32 files in other folders)
