[package]
name = "aoc2023"
version = "1.0.0"
authors = ["Jan-Lukas Wynen"]
description = "Advent of code solution for 2023."
license = "MIT"

edition = "2021"
rust-version = "1.73"

[dependencies]
paste = "1.0"

[lib]
name = "aoc2023"
path = "lib/lib.rs"

[[bin]]
name = "s01"
path = "s01/src/s01.rs"
