[package]
name = "aoc2023"
version = "1.0.0"
authors = ["Jan-Lukas Wynen"]
description = "Advent of code solution for 2023."
license = "MIT"

edition = "2021"
rust-version = "1.73"

[dependencies]
itertools = "0.12"
ndarray = "0.15"
nom = "7.1"
paste = "1.0"
rayon = "1.8"
regex = "1.10"

[lib]
name = "aoc2023"
path = "lib/lib.rs"

[[bin]]
name = "s01"
path = "s01/src/s01.rs"

[[bin]]
name = "s02"
path = "s02/src/s02.rs"

[[bin]]
name = "s03"
path = "s03/src/s03.rs"

[[bin]]
name = "s04"
path = "s04/src/s04.rs"

[[bin]]
name = "s05"
path = "s05/src/s05.rs"

[[bin]]
name = "s06"
path = "s06/src/s06.rs"

[[bin]]
name = "s07"
path = "s07/src/s07.rs"
