[package]
name = "aoc2025"
version = "1.0.0"
authors = ["Jan-Lukas Wynen"]
description = "Advent of code solution for 2025."
license = "MIT"

edition = "2024"
rust-version = "1.91"

[dependencies]
anyhow = "1.0"
ndarray = { version = "0.17", features = ["rayon"] }
paste = "1.0"
pest = "2.8"
pest_derive = "2.8"
rayon = "1.11"
regex = "1.12"

[lib]
name = "aoc2025"
path = "lib/lib.rs"

[[bin]]
name = "s01"
path = "s01/src/s01.rs"

[[bin]]
name = "s02"
path = "s02/src/s02.rs"

[[bin]]
name = "s03"
path = "s03/src/s03.rs"

[[bin]]
name = "s04"
path = "s04/src/s04.rs"

[[bin]]
name = "s05"
path = "s05/src/s05.rs"
