[package]
name = "aoc2023-macro"
version = "1.0.0"
authors = ["Jan-Lukas Wynen"]
description = "Advent of code solution for 2023 - macro crate."
license = "MIT"

edition = "2021"
rust-version = "1.73"

[dependencies]
syn = { version="2.0" , features = ["full"]}
quote = "1.0"

[lib]
proc-macro = true
name = "aoc2023_macro"
path = "src/lib.rs"